HARDENING AFTER E2E
